--- a/kubernetes/.gitlab-ci.yml
+++ b/kubernetes/.gitlab-ci.yml
@@ -35,17 +35,18 @@ deploy:
     # - kubectl get pods -n std-022-024
     # - kubectl get pods -l app=frontend -o=jsonpath='{.items[*].metadata.name}' | tr -s '[[:space:]]' '\n' | xargs -I {} kubectl logs {}
 
-    - kubectl apply -f kubernetes/backend-report --recursive --kubeconfig ~/.kube/config
-    - kubectl wait --for=condition=Available deployment.apps/backend-report --timeout=100s --kubeconfig ~/.kube/config
-    # - kubectl logs deployment.apps/backend-report
-    # - kubectl describe pod backend-report
-    # - kubectl describe deployment backend-report --kubeconfig ~/.kube/config
-
+    # сначала backend , потому что секрет в данной папке
     - kubectl apply -f kubernetes/backend --recursive --kubeconfig ~/.kube/config
     - kubectl wait --for=condition=Available deployment.apps/backend --timeout=100s --kubeconfig ~/.kube/config
     # - kubectl logs deployment.apps/backend
     # - kubectl describe pod backend
     # - kubectl describe deployment backend --kubeconfig ~/.kube/config
+
+    - kubectl apply -f kubernetes/backend-report --recursive --kubeconfig ~/.kube/config
+    - kubectl wait --for=condition=Available deployment.apps/backend-report --timeout=100s --kubeconfig ~/.kube/config
+    # - kubectl logs deployment.apps/backend-report
+    # - kubectl describe pod backend-report
+    # - kubectl describe deployment backend-report --kubeconfig ~/.kube/config
  
     - kubectl apply -f kubernetes/frontend --recursive --kubeconfig ~/.kube/config
     - kubectl wait --for=condition=Available deployment.apps/frontend --timeout=100s --kubeconfig ~/.kube/config
