glava 10.2 added actuator in  backend/deployment for prometheus

--- a/sausage-store-chart/charts/backend/templates/deloyment.yaml
+++ b/sausage-store-chart/charts/backend/templates/deloyment.yaml
@@ -28,6 +28,11 @@ spec:
       app: {{ .Chart.Name }}
   template:
     metadata:
+      # glava_10.2  prometheus
+      annotations:
+        prometheus.io/path: /actuator/prometheus
+        prometheus.io/port: "8080"
+        prometheus.io/scrape: "true"
       labels:
         app: {{ .Chart.Name }}
     spec:
